admission/ValidatingAdmissionPolicy/policies/selinux-role/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: selinux-role-containers
  annotations:
    security.kubeapt.io/displayName: "Selinux Role"
    security.kubeapt.io/description: "ValidatingAdmissionPolicy for selinux-role/containers."
    security.kubeapt.io/resource: "Containers"
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: "Adjust workloads to satisfy the selinux-role/containers policy."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      object.spec.containers.all(c,
        !has(c.securityContext) ||
        !has(c.securityContext.seLinuxOptions) ||
        !has(c.securityContext.seLinuxOptions.role) ||
        c.securityContext.seLinuxOptions.role == ""
      )
    message: |
      spec.containers[*].securityContext.seLinuxOptions.role must be undefined or an empty string ("").
